--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,14 @@
   --foreground: #171717;
 }
 
+@layer utilities {
+  .text-outline {
+    -webkit-text-stroke: 2px white;
+    color: transparent;
+  }
+}
+
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -12,15 +20,8 @@
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: mulish, sans-serif;
 }
